feat: add logos

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -64,14 +64,10 @@
       </OL>
     </ASIDE>
     <div>
-      Created by <a href="https://sapka.me" target="_blank">Michal</a>
+      Created by <a href="https://sapka.me" target="_blank">Michal</a>.
+      <a href="https://github.com/michalsapka/meme.sapka.me" target="_blank">Source code is available</a>.
       <BR>
       <BR>
-      <a href="/index.xml">
-        {{ $image := resources.Get "rss.png" }}
-        {{ $image := $image.Resize "x25" }}
-        <img alt="rss" src="{{ $image.Permalink }}" width={{$image.Width}} height={{$image.Height}}/>
-      </a>
     </div>
 
     </FOOTER>
